--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "cross-env": "^5.2.0",
-    "koa": "^2.6.2"
+    "koa": "^2.6.2",
+    "nuxt": "^2.0.0",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
